Included updates between Feb '22 and June '22

--- a/index.html
+++ b/index.html
@@ -120,10 +120,27 @@
          <h3> <p style="margin-bottom:0.3cm;"> Selected Publications </p></h3>
          <ul>
              <li>
+                 <b>
+                     Feferman-Vaught decompositions for prefix classes of first order logic
+                 </b>
+                 &nbsp
+                 [<a data-bs-toggle="collapse" href="#fv-prefix" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+		 [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>]
+                 <div class="collapse" id="fv-prefix">
+                     <div class="card card-body">
+                     The Feferman-Vaught theorem provides a way of evaluating a first order sentence φ on a disjoint union of structures by producing a decomposition of φ into sentences which can be evaluated on the individual structures and the results of these evaluations combined using a propositional formula. This decomposition can in general be non-elementarily larger than φ. We show that for first order sentences in prenex normal form with a fixed number of quantifier alternations, such a decomposition, further with the same number of quantifier alternations, can be obtained in time elementary in the size of φ. We obtain this result as a consequence of a more general decomposition theorem that we prove for a family of infinitary logics we define. We extend these results by considering binary operations other than disjoint union, in particular sum-like operations such as ordered sum and NLC-sum, that are definable using quantifier-free interpretations. 
+                     </div>
+                 </div>
+             </li>
+	 
+             <li>
                  <b>MSO undecidability for some hereditary classes of unbounded clique-width</b>
                  (with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a>)
                  [<a data-bs-toggle="collapse" href="#mso-undec" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
-                 [<a href="https://arxiv.org/abs/2011.02894/">arxiv</a>] <br>
+                 [<a href="https://drops.dagstuhl.de/opus/volltexte/2022/15737/">paper</a>]
+                 [<a href="Papers/mso-undec.pdf">pdf</a>]
+                 [<a href="Talks/mso-undec-talk.pdf">slides</a>]
+		 [<a href="https://arxiv.org/abs/2011.02894/">arxiv</a>] <br>
                  <p style="margin-bottom:0.2cm;">Proc. of the 30<sup>th</sup> Computer Science Logic (CSL), Göttingen, Germany, pp. 17:1-17:17, February 2022</p>
                  <div class="collapse" id="mso-undec">
                      <div class="card card-body">
@@ -584,13 +601,27 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
             <li>
                 <b>Algorithmic metatheorems - a survey</b>
                 [<a data-bs-toggle="collapse" href="#algo-meta" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
-                [<a href="Talks/algometa-talk.pdf">slides</a>]<br />
-                <p style="margin-bottom:0.2cm;">Presented at the <a href="https://fmindia.cmi.ac.in/update2018/">Formal Methods Update (FMU) Meeting</a>, BITS Goa, India, July, 2018</p>
+                [<a href="Talks/algometa-talk.pdf">slides</a>][<a data-bs-toggle="collapse" href="#algo-meta-talk" aria-expanded="false" aria-controls="collapseExample">Talk venues</a>]
+                <br> A survey of the methods used in showing algorithmic meta theorems over various classes of structures.
+		<p style="margin-bottom:0.2cm;">
                 <div class="collapse" id="algo-meta">
                     <div class="card card-body">
                         We present a (partial) survey of the area of algorithmic metatheorems. These theorems provide fixed parameter tractable (FPT) algorithms for the model checking problem, namely the problem of checking if an input structure from a given class of structures satisfies a property that is expressible in a given logic, like say first order logic (FO) or monadic second order logic (MSO). The parameters in these algorithms are the size of the logical description of the property, along with (the numerical description of) some structural aspect of the input structure. We look at various well-studied classes of posets and graphs that admit such FPT algorithms and give the intuitive ideas behind the techniques involved.
                     </div>
                 </div>
+ 	        <div class="collapse" id="algo-meta-talk">
+                    <div class="card card-body">
+                        <ul>
+                        <li>
+                            Apr '22: Theory Seminar, Department of Computer Science and Engineering, IIT Delhi, India
+                        </li>
+                        <li>
+			    Jul '18: <a href="https://fmindia.cmi.ac.in/update2018/">Formal Methods Update (FMU) Meeting</a>, BITS Goa, India
+                        </li>
+                        </ul>
+                    </div>
+                </div>
+
             </li>
 
             <li>
