--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                  </b>
                  &nbsp
                  [<a data-bs-toggle="collapse" href="#fv-prefix" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
-		 [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>]
+		 [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>] <br>
+		     Conditionally accepted at the <a href="https://www.springer.com/journal/10849">Journal of Logic, Language and Information (JLLI)</a>, March 2022
                  <div class="collapse" id="fv-prefix">
                      <div class="card card-body">
                      The Feferman-Vaught theorem provides a way of evaluating a first order sentence φ on a disjoint union of structures by producing a decomposition of φ into sentences which can be evaluated on the individual structures and the results of these evaluations combined using a propositional formula. This decomposition can in general be non-elementarily larger than φ. We show that for first order sentences in prenex normal form with a fixed number of quantifier alternations, such a decomposition, further with the same number of quantifier alternations, can be obtained in time elementary in the size of φ. We obtain this result as a consequence of a more general decomposition theorem that we prove for a family of infinitary logics we define. We extend these results by considering binary operations other than disjoint union, in particular sum-like operations such as ordered sum and NLC-sum, that are definable using quantifier-free interpretations. 
@@ -173,7 +174,7 @@
                  [<a data-bs-toggle="collapse" href="#cwpoints" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                  [<a href="http://dx.doi.org/10.1016/j.jctb.2021.09.001">paper</a>]
                  <br>
-                 <p style="margin-bottom:0.2cm;">To appear in the Journal of Combinatorial Theory, Series B, 2021</p>
+                 <p style="margin-bottom:0.2cm;">To appear in the <a href="https://www.journals.elsevier.com/journal-of-combinatorial-theory-series-b">Journal of Combinatorial Theory, Series B</a>, 2021</p>
                  <div class="collapse" id="cwpoints">
                      <div class="card card-body"> While structural width parameters (of the input) belong to the standard toolbox of graph algorithms, it is not the usual case in computational geometry. As a case study we propose a natural extension of the structural graph parameter of clique-width to geometric point configuration represented by their order type. We study basic properties of this clique-width notion, and show that it is aligned with the general concept of clique-width of relational structures by Blumensath and Courcelle (2006). We also relate the new notion to monadic second-order logic of point configurations. As an application, we provide several linear FPT time algorithms for geometric point problems which are NP-hard in general, in the special case that the input point set is of bounded clique-width and the clique-width expression is also given.
                      </div>
