Updates between Feb '22 and Jun '22

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <a class="nav-item nav-link" href="#research-interests">Research Interests</a>
             <a class="nav-item nav-link" href="#publications">Publications</a>
             <a class="nav-item nav-link" href="#other-articles">Other articles</a>
+            <a class="nav-item nav-link" href="#activities">Professional Activities</a>
             <a class="nav-item nav-link" href="#teaching">Teaching</a>
             <a class="nav-item nav-link" href="#some-talks-notes">Some talks and reports</a>
           </div>
@@ -521,6 +522,16 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
 
             </div>
         <hr />
+
+       <div class="div-activities" id="activities">
+         <h3> Professional Activities </h3>
+         <p>
+           <ul>
+		   <li><p style="margin-bottom:0.2cm;"> Conference reviewing: LICS (2022), FoSSaCS (2020), SODA (2020), ICLA (2019, 2015), CSL-LICS (2014), FSTTCS (2011, 2008), TIME (2011), ICTAC (2010)</p></li>
+		   <li><p style="margin-bottom:0.2cm;"> Journal reviewing: JCT-B (2021), NDJFL (2021), and LMCS (2017, 2015)</p></li>
+		   <li><p style="margin-bottom:0.2cm;"> Program Committee member: ICLA 2019</p></li>
+	   </ul>
+	</div>
 
        <div class="div-teaching" id="teaching">
          <h3> Teaching </h3>
