--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                  &nbsp
                  [<a data-bs-toggle="collapse" href="#fv-prefix" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
 		 [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>] <br>
-		     Conditionally accepted at the <a href="https://www.springer.com/journal/10849">Journal of Logic, Language and Information (JLLI)</a>, March 2022 
+		     To appear in the <a href="https://www.springer.com/journal/10849">Journal of Logic, Language and Information (JLLI)</a> (accepted June 2022)
 		     <br>
                  <div class="collapse" id="fv-prefix">
                      <div class="card card-body">
