--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
          <p>
            <ul>
 		   <li><p style="margin-bottom:0.2cm;"> <b> Conference reviewing: </b> LICS (2022), FoSSaCS (2020), SODA (2020), ICLA (2019, 2015), CSL-LICS (2014), FSTTCS (2011, 2008), TIME (2011), ICTAC (2010)</p></li>
-		   <li><p style="margin-bottom:0.2cm;"> <b> Journal reviewing: </b>JCT-B (2021), NDJFL (2021), and LMCS (2017, 2015)</p></li>
+		   <li><p style="margin-bottom:0.2cm;"> <b> Journal reviewing: </b>SIDMA (2022), JCT-B (2021), NDJFL (2021), and LMCS (2017, 2015)</p></li>
 		   <li><p style="margin-bottom:0.2cm;"> <b> Program Committee member: </b> ICLA 2019</p></li>
 	   </ul>
 	</div>
@@ -677,7 +677,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
             <li>
                 <p style="margin-bottom:0.2cm;">
                     <b>Interview for Bitstream, the newsletter of the Department of CSE, IIT Bombay</b>
-                    &nbsp[<a href="Other/cse-bitstream-interview.pdf">newsletter</a>]</p>
+                    &nbsp[<a href="Other/bitstream-interview.pdf">newsletter</a>]</p>
             </li>
 
             </ul>
