--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
                  </b>
                  &nbsp
                  [<a data-bs-toggle="collapse" href="#fv-prefix" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
-		 [<a href="https://arxiv.org/abs/2112.15064">arxiv</a>] <br>
-		     To appear in the <a href="https://www.springer.com/journal/10849">Journal of Logic, Language and Information (JLLI)</a> (accepted June 2022)
+		 <!--[<a href="https://arxiv.org/abs/2112.15064">pdf</a>]-->
+                 [<a href="https://link.springer.com/article/10.1007/s10849-022-09384-9">paper</a>] <br>
+                 Journal of Logic, Language and Information (JLLI), 32(1): 147-174, 2023
+                 <!--<a href="https://www.springer.com/journal/10849">Journal of Logic, Language and Information (JLLI)</a> (accepted June 2022)-->
 		     <br>
                  <div class="collapse" id="fv-prefix">
                      <div class="card card-body">
