--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
          <h5> Tata Consultancy Services (TCS) Research, Pune, India<!--Post-doctoral Research Associate,
             University of Cambridge, United Kingdom-->
          </h5>
-         <p><b>Email:</b> <i>firstname.lastname [at] cl.cam.ac.uk</i> | <b>Office:</b> +44 1223 763 541 <br>
-            <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD, UK.
+         <p><b>Email:</b> <i>firstname.lastname [at] tcs.com</i> | <!--<b>Office:</b> +44 1223 763 541 <br>
+            <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD, UK.-->
          </p>
           <hr />
           <div class="row" id="biography">
