--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
          <h5> Tata Consultancy Services (TCS) Research, Pune, India<!--Post-doctoral Research Associate,
             University of Cambridge, United Kingdom-->
          </h5>
-         <p><b>Email:</b> <i>firstname.lastname [at] tcs.com</i> | <!--<b>Office:</b> +44 1223 763 541 <br>
+         <p><b>Email:</b> <i>firstname.lastname [at] tcs.com</i>  <!-- |<b>Office:</b> +44 1223 763 541 <br>
             <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD, UK.-->
          </p>
           <hr />
           <div class="row" id="biography">
           <h3> About me </h3>
               <p>
-                  I am a post-doctoral research associate at the Department of Computer Science and Technology at the University of Cambridge, working with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a> in the project "Logical Fractals" funded by the <a href=>Leverhulme Trust</a>.
-                  Prior to coming to Cambridge, I was a post-doctoral fellow in the <a href="https://www.imsc.res.in/theoretical_computer_science">Theoretical Computer Science Wing</a> at the <a href="https://www.imsc.res.in/">Institute of Mathematical Sciences, Chennai</a>.
+                  I am a Consultant at Tata Research Development and Design Centre (TRDDC), the branch of TCS Research in Pune. Prior to joining TRDDC, I was a post-doctoral research associate at the Department of Computer Science and Technology at the University of Cambridge, working with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a> in the project "Logical Fractals" funded by the <a href=>Leverhulme Trust</a>.
+                  Before coming to Cambridge, I was a post-doctoral fellow in the <a href="https://www.imsc.res.in/theoretical_computer_science">Theoretical Computer Science Wing</a> at the <a href="https://www.imsc.res.in/">Institute of Mathematical Sciences, Chennai</a>.
                   I completed my Ph.D., and also my Bachelors and Masters, from the <a href="https://www.cse.iitb.ac.in">Department of Computer Science and Engineering</a> at <a href="https://www.iitb.ac.in">IIT Bombay</a>. My dissertation, titled "<a href="https://arxiv.org/abs/1609.06297">A generalization of the Łoś-Tarski preservation theorem</a>", was completed under the guidance of <a href=https://www.researchgate.net/profile/Bharat_Adsul>Bharat Adsul</a> and <a href=https://www.cse.iitb.ac.in/~supratik/>Supratik Chakraborty</a>. A summary of my dissertation can be found <a href="https://arxiv.org/abs/1811.01014">here</a>.
               </p>
           </div></div>
