--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
          <h3> Professional Activities </h3>
          <p>
            <ul>
-		   <li><p style="margin-bottom:0.2cm;"> <b> Conference reviewing: </b> LICS (2022), FoSSaCS (2020), SODA (2020), ICLA (2019, 2015), CSL-LICS (2014), FSTTCS (2011, 2008), TIME (2011), ICTAC (2010)</p></li>
-		   <li><p style="margin-bottom:0.2cm;"> <b> Journal reviewing: </b>SIDMA (2022), JCT-B (2021), NDJFL (2021), and LMCS (2017, 2015)</p></li>
-		   <li><p style="margin-bottom:0.2cm;"> <b> Program Committee member: </b> ICLA 2019</p></li>
+		   <li><p style="margin-bottom:0.2cm;"> <b> Conference reviewing: </b> FSTTCS (2023), LICS (2022), FoSSaCS (2020), SODA (2020), ICLA (2019, 2015), CSL-LICS (2014), FSTTCS (2011, 2008), TIME (2011), ICTAC (2010)</p></li>
+		   <li><p style="margin-bottom:0.2cm;"> <b> Journal reviewing: </b> JSL (2023), SIDMA (2022), JCT-B (2021), NDJFL (2021), and LMCS (2017, 2015)</p></li>
+		   <li><p style="margin-bottom:0.2cm;"> <b> Program Committee member: </b> FSTTCS 2023, ICLA 2019</p></li>
 	   </ul>
 	</div>
 
@@ -688,7 +688,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
     </div>
 
  <hr />
-            <p align="right">Abhisekh Sankaran, 2022</p>
+            <p align="right">Abhisekh Sankaran, 2023</p>
      <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
