Update menu background color

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <style type="text/css">
       .card{
         color: black;
-        background-color: #ddd8eb; <!-- #ede4e4 nice color violet-grey-->
+        background-color: #513d8a; <!--  #ddd8eb, #ede4e4 nice color violet-grey-->
       }
       .p1 {
         font-family: Pangram, Garamond, Georgia, "Times New Roman";
