added RHPL info

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
            <ul>
 		   <li><p style="margin-bottom:0.2cm;"> <b> Conference reviewing: </b> FSTTCS (2023), LICS (2022), FoSSaCS (2020), SODA (2020), ICLA (2019, 2015), CSL-LICS (2014), FSTTCS (2011, 2008), TIME (2011), ICTAC (2010)</p></li>
 		   <li><p style="margin-bottom:0.2cm;"> <b> Journal reviewing: </b> JSL (2023), SIDMA (2022), JCT-B (2021), NDJFL (2021), and LMCS (2017, 2015)</p></li>
-		   <li><p style="margin-bottom:0.2cm;"> <b> Program Committee member: </b> FSTTCS 2023, ICLA 2019</p></li>
+		   <li><p style="margin-bottom:0.2cm;"> <b> Program Committee member: </b> FSTTCS 2023, RHPL 2023, ICLA 2019</p></li>
 	   </ul>
 	</div>
           <hr />
@@ -557,6 +557,22 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
          <h3> Some talks and reports </h3>
             <p>
             <ul>
+            <li>
+                <b>Program verification using small models</b>
+                <a data-bs-toggle="collapse" href="#rhpl" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
+                <a href="Talks/rhpl-submission.pdf">[report draft]</a>
+                <br />
+                <p style="margin-bottom:0.2cm;">Accepted short talk (upcoming) at the <a href="https://www.cl.cam.ac.uk/events/owls/">Workshop on Research Highlights in Programming Languages (RHPL) 2023</a>, December, 2023</p>
+                <div class="collapse" id="rhpl">
+                    <div class="card card-body"> ¬φ<sub>n</sub>
+
+                    We explore the use of methods from model theory in the verification of array programs. Given a program P and an assertion A to check of P, we formulate these respectively as sentences φ<sub>P</sub> and φ<sub>A</sub> of multi-sorted first order logic. The sentence φ<sub>P</sub> is such that modulo a small set φ<sub>{ax}</sub> of axioms, the models of φ<sub>P</sub> are in 1-1 correspondence with  (suitably abstract representations of) the executions of P on arbitrary input arrays. Likewise, the models of φ<sub>A</sub> restricted to the class of models of φ<sub>P</sub> \wedge φ<sub>{ax}</sub>, correspond to (suitably abstracted) executions of P that satisfy the assertion A.
+
+                    Our approach to verifying the program P against the assertion A consists of showing that the sentence \alpha_{P, A} := \varphi_{ax} \wedge \varphi_P \wedge \neg \varphi_A has the *small model property*. That is, if \alpha_{P, A} has a model of some finite size, then there is also such a model in which the domains interpreting the sorts have all sizes bounded by a small function of P and A. The desired verification reduces to searching for models of \alpha_{P, A} of sizes within the mentioned bound. We examine specific classes of programs and assertions, and establish the small model property for \alpha_{P, A} by showing that models of \alpha_{P, A} that are large admit local reductions that are effected by "removal of iterations" in the executions of P that they correspond to.
+                    </div>
+                </div>
+            </li>
+
             <li>
                 <b>Extension preservation in the finite and prefix classes of first order logic</b>
                 (with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a>)
