changed id for fmu entry from rhpl to fmu23

--- a/index.html
+++ b/index.html
@@ -584,11 +584,11 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
 
             <li>
                 <b>First order Skolem function synthesis over finite structures</b>
-                <a data-bs-toggle="collapse" href="#rhpl" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
+                <a data-bs-toggle="collapse" href="#fmu23" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
                 <!--<a href="Papers/fmu23-talk.pdf">[slides]</a>-->
                 <br />
                 <p style="margin-bottom:0.2cm;">Presented at the <a href="https://fmindia.cmi.ac.in/update2023/">Formal Methods Update Meet (FMU) 2023</a>, June-July, 2023</p>
-                <div class="collapse" id="rhpl">
+                <div class="collapse" id="fmu23">
                     <div class="card card-body">
                         <div class="card-text">
                             The problem of Skolem function synthesis (SFS) asks if there is an algorithm that, given a prenex first order (FO) formula φ and a structure A, synthesizes the interpretations in A of the Skolem functions for the existential variables of φ, assuming that computable such interpretations exist. Here synthesis means constructing algorithms that compute the said interpretations. This problem has been studied extensively in the Boolean setting but a commensurate study for FO is lacking in the literature. A <a href="">recent paper<a/> of Akshay and Chakraborty (MFCS '22) provides a (possibly the first) systemmatic study of SFS for FO showing amongst other results that SFS in general has a negative answer, and that if the structure is fixed, then SFS has a positive answer precisely when the elementary diagram of the structure is decidable.
